# veritypay-conformance

./: ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md
crates/vp-conformance-adapter/: Cargo.toml
crates/vp-conformance-adapter/src/: lib.rs  stub.rs
crates/vp-conformance-adapter/tests/: stub_adapter.rs
crates/vp-conformance-cli/: Cargo.toml
crates/vp-conformance-cli/src/: exit_code.rs  lib.rs  main.rs  run.rs
crates/vp-conformance-cli/tests/: run_command.rs
crates/vp-conformance-core/: Cargo.toml
crates/vp-conformance-core/src/: adapter.rs  adapter_error.rs  adapter_id.rs  adapter_run_options.rs  build_error.rs  comparable_result.rs  conformance_result.rs  conformance_verdict.rs  error.rs  lib.rs  scenario_binding.rs  scenario_context.rs  scenario_id.rs  scenario_metadata.rs
crates/vp-conformance-core/tests/: domain_types.rs
crates/vp-conformance-report/: Cargo.toml
crates/vp-conformance-report/src/: conformance_report.rs  human_report_renderer.rs  json_report_renderer.rs  lib.rs  report.rs  report_render_error.rs
crates/vp-conformance-report/tests/: conformance_report.rs  human_report_renderer.rs  json_report_renderer.rs
crates/vp-conformance-runner/: Cargo.toml
crates/vp-conformance-runner/src/: comparison_engine.rs  lib.rs  oracle.rs  oracle_error.rs  runner.rs  runner_error.rs  runner_result.rs
crates/vp-conformance-runner/tests/: comparison_engine.rs  reference_oracle.rs  runner_orchestration.rs
crates/vp-conformance-scenarios/: Cargo.toml
crates/vp-conformance-scenarios/src/: error.rs  fixture.rs  lib.rs  loader.rs  options.rs
crates/vp-conformance-scenarios/tests/: scenario_loader.rs  spec_scenario_loader.rs
crates/vp-conformance-scenarios/tests/fixtures/: claim_evidence_mismatch.toml  invalid_binding.toml  minimal.toml  missing_scenario_id.toml
docs/adrs/: 0001-implementation-language.md  0002-cargo-workspace-architecture.md  0003-conformance-architecture.md  0004-conformance-public-contract.md  README.md
scripts/: readiness-gate.sh
tests/: workspace.rs
