[package]
name = "vp-conformance-adapter"
description = "Implementation adapter interface for the VerityPay conformance suite"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
vp-conformance-core = { workspace = true }
vp-reference-model = { workspace = true }

[dev-dependencies]
vp-conformance-scenarios = { workspace = true }

[lints]
workspace = true
