[package]
name = "vp-conformance-core"
description = "ScenarioContext, contracts, and shared harness types for the VerityPay conformance suite"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
vp-reference-model = { workspace = true }

[lints]
workspace = true
