[package]
name = "vp-conformance-report"
description = "Conformance report formatting for the VerityPay conformance suite"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
vp-conformance-core = { workspace = true }

[lints]
workspace = true
