[package]
name = "vp-conformance-scenarios"
description = "VP-CS scenario fixture loading for the VerityPay conformance suite"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
vp-conformance-core = { workspace = true }

[lints]
workspace = true
