[package]
name = "vp-conformance-scenarios"
description = "VP-CS scenario fixture loading for the VerityPay conformance suite"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
vp-conformance-core = { workspace = true }
vp-reference-model = { workspace = true }

[lints]
workspace = true
